--- a/html/infojadwal.html
+++ b/html/infojadwal.html
@@ -25,7 +25,98 @@
   </nav>
 </header>
 <main>
-<div class="banner"><h1>Beranda</h1></div>
+<div class="banner"><h1>INFORMASI JADWAL KAPAL</h1></div>
+<title>Kapal PT. Monyet Terbang</title>
+<style>
+  body {
+    background-color: #fff8e7;
+    font-family: Arial, sans-serif;
+    color: #000;
+    padding: 20px;
+  }
+  h1 {
+    text-align: center;
+    margin-bottom: 5px;
+  }
+  h1 u {
+    text-decoration: underline;
+  }
+  h2 {
+    font-family: 'Arial Black', Gadget, sans-serif;
+  }
+  table {
+    width: 100%;
+    border-collapse: collapse;
+    margin-bottom: 40px;
+    font-size: 14px;
+  }
+  table, th, td {
+    border: 1px solid black;
+  }
+  th, td {
+    padding: 6px;
+    text-align: left;
+  }
+  th {
+    font-weight: bold;
+  }
+</style>
+</head>
+<body>
+
+<h1>KAPAL PT. MONYET TERBANG<br /><u></u></h1>
+
+<h2>PZE TERBANG</h2>
+<table>
+  <thead>
+    <tr>
+      <th>Hari</th>
+      <th>Bagian</th>
+      <th>Total Waktu</th>
+      <th>Awal</th>
+      <th>Akhir</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr><td>1</td><td>Registrasi Masuk</td><td>2 jam</td><td>20:00</td><td>22:00</td></tr>
+    <tr><td>1 dan 2</td><td>Perjalanan</td><td>11 jam</td><td>22:00</td><td>09:00</td></tr>
+    <tr><td>2</td><td>Menurunkan Penumpang</td><td>1 Jam</td><td>09:00</td><td>10:00</td></tr>
+    <tr><td>2</td><td>Eksplorasi</td><td>6 Jam</td><td>10:00</td><td>16:00</td></tr>
+    <tr><td>2</td><td>Registrasi masuk kembali</td><td>2 jam</td><td>16:00</td><td>18:00</td></tr>
+    <tr><td>2 dan 3</td><td>Perjalanan</td><td>9 jam</td><td>18:00</td><td>03:00</td></tr>
+    <tr><td>3</td><td>Menurunkan Penumpang</td><td>1 Jam</td><td>06:00</td><td>07:00</td></tr>
+    <tr><td>3</td><td>Eksplorasi</td><td>7 jam</td><td>07:00</td><td>14:00</td></tr>
+    <tr><td>3</td><td>Registrasi masuk kembali</td><td>2 jam</td><td>14:00</td><td>16:00</td></tr>
+    <tr><td>3 dan 4</td><td>Perjalanan Balik</td><td>16 jam</td><td>16:00</td><td>08:00</td></tr>
+    <tr><td>4</td><td>Menurunkan Penumpang</td><td>1 jam</td><td>08:00</td><td>09:00</td></tr>
+  </tbody>
+</table>
+
+<h2>RZL TERBANG</h2>
+<table>
+  <thead>
+    <tr>
+      <th>Hari</th>
+      <th>Bagian</th>
+      <th>Total Waktu</th>
+      <th>Awal</th>
+      <th>Akhir</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr><td>1</td><td>Registrasi Masuk</td><td>2 jam</td><td>21:00</td><td>23:00</td></tr>
+    <tr><td>1 dan 2</td><td>Perjalanan</td><td>6 jam</td><td>23:00</td><td>06:00</td></tr>
+    <tr><td>2</td><td>Menurunkan Penumpang</td><td>1 Jam</td><td>06:00</td><td>07:00</td></tr>
+    <tr><td>2</td><td>Eksplorasi</td><td>6 Jam</td><td>07:00</td><td>13:00</td></tr>
+    <tr><td>2</td><td>Registrasi masuk kembali</td><td>2 jam</td><td>13:00</td><td>15:00</td></tr>
+    <tr><td>2 dan 3</td><td>Perjalanan</td><td>20 jam</td><td>15:00</td><td>11:00</td></tr>
+    <tr><td>3</td><td>Menurunkan Penumpang</td><td>1 Jam</td><td>11:00</td><td>12:00</td></tr>
+    <tr><td>3</td><td>Eksplorasi</td><td>6 jam</td><td>12:00</td><td>18:00</td></tr>
+    <tr><td>3</td><td>Registrasi masuk kembali</td><td>2 jam</td><td>18:00</td><td>20:00</td></tr>
+    <tr><td>3 dan 4</td><td>Perjalanan Balik</td><td>23 jam</td><td>20:00</td><td>19:00</td></tr>
+    <tr><td>4</td><td>Menurunkan Penumpang</td><td>1 jam</td><td>19:00</td><td>20:00</td></tr>
+  </tbody>
+</table>
 <br><br><br><br>
 </main>
 <footer id="footer">
