--- a/html/infojadwal.html
+++ b/html/infojadwal.html
@@ -117,6 +117,53 @@
     <tr><td>4</td><td>Menurunkan Penumpang</td><td>1 jam</td><td>19:00</td><td>20:00</td></tr>
   </tbody>
 </table>
+  <h2>KZG TERBANG</h2>
+<table>
+  <thead>
+    <tr>
+      <th>Hari</th>
+      <th>Bagian</th>
+      <th>Total Waktu</th>
+      <th>Awal</th>
+      <th>Akhir</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr><td>1</td><td>Registrasi Masuk</td><td>2 jam</td><td>18:00</td><td>20:00</td></tr>
+    <tr><td>1, 2, Dan 3</td><td>Perjalanan</td><td>41 jam</td><td>20:00</td><td>13:00</td></tr>
+    <tr><td>3</td><td>Menurunkan Penumpang</td><td>1 Jam</td><td>13:00</td><td>14:00</td></tr>
+    <tr><td>3</td><td>Eksplorasi</td><td>6 Jam</td><td>14:00</td><td>20:00</td></tr>
+    <tr><td>3</td><td>Registrasi masuk kembali</td><td>2 jam</td><td>20:00</td><td>22:00</td></tr>
+    <tr><td>3 Dan 4</td><td>Perjalanan</td><td>6 jam</td><td>22:00</td><td>04:00</td></tr>
+    <tr><td>4</td><td>Menurunkan Penumpang</td><td>1 Jam</td><td>07:00</td><td>08:00</td></tr>
+    <tr><td>4</td><td>Eksplorasi</td><td>9 jam</td><td>08:00</td><td>17:00</td></tr>
+    <tr><td>4</td><td>Registrasi masuk kembali</td><td>2 jam</td><td>17:00</td><td>19:00</td></tr>
+    <tr><td>4, 5, dan 6</td><td>Perjalanan Balik</td><td>37 jam</td><td>19:00</td><td>08:00</td></tr>
+    <tr><td>6</td><td>Menurunkan Penumpang</td><td>1 jam</td><td>08:00</td><td>09:00</td></tr>
+  </tbody>
+</table>
+<h2>MSC OREO</h2>
+<table>
+  <thead>
+    <tr>
+      <th>Hari</th>
+      <th>Bagian</th>
+      <th>Total Waktu</th>
+      <th>Awal</th>
+      <th>Akhir</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr><td>1 Dan 2</td><td>Pengangkutan Kargo</td><td>24 jam</td><td>08:00</td><td>08:00</td></tr>
+    <tr><td>2,3,dan 4</td><td>Perjalanan</td><td>60 jam</td><td>08:00</td><td>20:00</td></tr>
+    <tr><td>4 Dan 5</td><td>Pengangkutan Kargo</td><td>24 Jam</td><td>20:00</td><td>20:00</td></tr>
+    <tr><td>5 Dan 6</td><td>Perjalanan</td><td>8 Jam</td><td>20:00</td><td>04:00</td></tr>
+    <tr><td>6 Dan 7</td><td>Pengangkutan Kargo</td><td>24 jam</td><td>04:00</td><td>04:00</td></tr>
+    <tr><td>7</td><td>Perjalanan</td><td>15 jam</td><td>04:00</td><td>19:00</td></tr>
+    <tr><td>7 Dan 8</td><td>Penurunan Kargo Kapal</td><td>24 Jam</td><td>19:00</td><td>19:00</td></tr>
+    <tr><td>8, 9, Dan 10</td><td>Perjalanan Balik</td><td>36 jam</td><td>19:00</td><td>07:00</td></tr>
+  </tbody>
+</table>
 <br><br><br><br>
 </main>
 <footer id="footer">
@@ -136,3 +183,4 @@
 </footer>
 </body>
 </html>
+
