--- a/html/infojadwal.html
+++ b/html/infojadwal.html
@@ -34,27 +34,22 @@
     color: #000;
     padding: 20px;
   }
-  h1 {
-    text-align: center;
-    margin-bottom: 5px;
-  }
-  h1 u {
-    text-decoration: underline;
-  }
   h2 {
     font-family: 'Arial Black', Gadget, sans-serif;
+    font-weight: bold;
+    margin-top: 40px;
+    margin-bottom: 10px;
   }
   table {
     width: 100%;
     border-collapse: collapse;
     margin-bottom: 40px;
-    font-size: 14px;
-  }
-  table, th, td {
-    border: 1px solid black;
+    background-color: white;
+    box-shadow: 0 0 8px rgba(0, 0, 0, 0.1);
   }
   th, td {
-    padding: 6px;
+    border: 1px solid black;
+    padding: 6px 10px;
     text-align: left;
   }
   th {
