--- a/index.html
+++ b/index.html
@@ -125,8 +125,8 @@
 <footer id="footer">
   <div class=kontak>
   <h3>Hubungi kami di:</h3>
-    <div class="footertext"><img src="whatsapp.png">081181945</div>
-    <div class="footertext"><img src="instagram.png">@PTmonyet_terbang</div>
+    <div class="footertext"><img src="assets/whatsapp.png">081181945</div>
+    <div class="footertext"><img src="assets/instagram.png">@PTmonyet_terbang</div>
   </div>
   <p>© 2025 PT Monyet Terbang. All rights reserved.</p>
 </footer>
