--- a/html/tiket.html
+++ b/html/tiket.html
@@ -25,111 +25,8 @@
   </nav>
 </header>
 <main>
-<div class="banner"><h1>PEMESANAN TIKET KAPAL</h1></div>
-<style>
-    body {
-        font-family: Georgia, serif;
-        background: #FAF5E4;
-        margin: 0;
-        padding: 0;
-    }
-
-    h2 {
-        text-align: center;
-        margin-top: 30px;
-        font-weight: bold;
-        letter-spacing: 1px;
-    }
-
-    .container {
-        display: flex;
-        justify-content: space-between;
-        padding: 20px 50px;
-        flex-wrap: wrap;
-    }
-
-    .box {
-        width: 45%;
-        background: #FFFDF7;
-        padding: 20px;
-        border-radius: 8px;
-    }
-
-    label {
-        display: block;
-        margin-top: 8px;
-        font-size: 14px;
-        font-weight: bold;
-    }
-
-    input, select {
-        width: 100%;
-        padding: 8px;
-        margin-top: 4px;
-        border: 1px solid #ccc;
-        border-radius: 6px;
-    }
-
-    .radio-group {
-        margin-top: 10px;
-    }
-
-    .radio-group label {
-        display: inline-block;
-        margin-right: 15px;
-        font-weight: normal;
-    }
-
-    .img-box {
-        width: 100%;
-        background: #d8f1ff;
-        height: 150px;
-        border-radius: 8px;
-        margin-top: 10px;
-    }
-
-    .harga {
-        background: #3D3D3D;
-        color: white;
-        padding: 15px;
-        border-radius: 8px;
-        font-size: 13px;
-        margin-top: 20px;
-    }
-
-    .submit-btn {
-        width: 100%;
-        padding: 12px;
-        margin: 20px 50px;
-        background: #4CAF50;
-        color: white;
-        font-size: 16px;
-        font-weight: bold;
-        border: none;
-        border-radius: 6px;
-        cursor: pointer;
-    }
-
-    .submit-btn:hover {
-        background: #3e9e45;
-    }
-
-    .hidden {
-        display: none;
-    }
-
-    @media (max-width: 900px) {
-        .box {
-            width: 100%;
-            margin-top: 20px;
-        }
-    }
-</style>
-</head>
-
-<body>
-
-<h2>PEMESANAN TIKET PT. MONYET TERBANG</h2>
+<div class="banner"><h1>Pemesanan <br> Tiket Kapal</h1></div>
+<br><br><br>
 
 <div class="container">
 
@@ -202,54 +99,7 @@
             </select>
         </div>
 <label>Tanggal Keberangkatan</label>
-    <select id="tanggal">
-        <option>Pilih Tanggal</option>
-        <option value="2024-11-18">18 November 2024</option>
-        <option value="2024-11-19">19 November 2024</option>
-        <option value="2024-11-20">20 November 2024</option>
-        <option value="2024-11-21">21 November 2024</option>
-        <option value="2024-11-22">22 November 2024</option>
-        <option value="2024-11-23">23 November 2024</option>
-        <option value="2024-11-24">24 November 2024</option>
-        <option value="2024-11-25">25 November 2024</option>
-        <option value="2024-11-26">26 November 2024</option>
-        <option value="2024-11-27">27 November 2024</option>
-        <option value="2024-11-28">28 November 2024</option>
-        <option value="2024-11-29">29 November 2024</option>
-        <option value="2024-11-30">30 November 2024</option>
-        <option value="2024-12-01">1 Desember 2024</option>
-        <option value="2024-12-02">2 Desember 2024</option>
-        <option value="2024-12-03">3 Desember 2024</option>
-        <option value="2024-12-04">4 Desember 2024</option>
-        <option value="2024-12-05">5 Desember 2024</option>
-        <option value="2024-12-06">6 Desember 2024</option>
-        <option value="2024-12-07">7 Desember 2024</option>
-        <option value="2024-12-08">8 Desember 2024</option>
-        <option value="2024-12-09">9 Desember 2024</option>
-        <option value="2024-12-10">10 Desember 2024</option>
-        <option value="2024-12-11">11 Desember 2024</option>
-        <option value="2024-12-12">12 Desember 2024</option>
-        <option value="2024-12-13">13 Desember 2024</option>
-        <option value="2024-12-14">14 Desember 2024</option>
-        <option value="2024-12-15">15 Desember 2024</option>
-        <option value="2024-12-16">16 Desember 2024</option>
-        <option value="2024-12-17">17 Desember 2024</option>
-        <option value="2024-12-18">18 Desember 2024</option>
-        <option value="2024-12-19">19 Desember 2024</option>
-        <option value="2024-12-20">20 Desember 2024</option>
-        <option value="2024-12-21">21 Desember 2024</option>
-        <option value="2024-12-22">22 Desember 2024</option>
-        <option value="2024-12-23">23 Desember 2024</option>
-        <option value="2024-12-24">24 Desember 2024</option>
-        <option value="2024-12-25">25 Desember 2024</option>
-        <option value="2024-12-26">26 Desember 2024</option>
-        <option value="2024-12-27">27 Desember 2024</option>
-        <option value="2024-12-28">28 Desember 2024</option>
-        <option value="2024-12-29">29 Desember 2024</option>
-        <option value="2024-12-30">30 Desember 2024</option>
-        <option value="2024-12-31">31 Desember 2024</option>
-        <option value="2025-01-01">1 Januari 2025</option>
-    </select>
+<input type="datetime-local" id="tanggal">    
         <label>Pelabuhan Asal</label>
         <input type="text" id="asal" readonly>
 
@@ -302,8 +152,9 @@
     </div>
 
 </div>
-
-<button class="submit-btn">PESAN SEKARANG</button>
+<br>
+<a class="submit-btn" href="https://youtu.be/dQw4w9WgXcQ?si=zK_AwuPNTob2XZe7">PESAN SEKARANG</a>
+<br><br><br><br><br><br><br><br>
 
 <script>
     const jenisTiket = document.getElementById('jenisTiket');
@@ -397,23 +248,14 @@
     kelas.addEventListener('change', updateHarga);
     usia.addEventListener('change', updateHarga);
 </script>
-
-<br><br><br><br>
 </main>
 <footer id="footer">
-  <hr style="border: 1.5px solid black; width: 80%; margin: 20px auto;">
-  <div style="text-align: center; background-color: #fdf7e9; padding: 10px 0;">
-    <h3 style="margin: 5px 0;">Hubungi kami di:</h3>
-    <div style="margin: 8px 0;">
-      <img src="whatsapp.png" alt="Nomor Telepon" style="vertical-align: middle; width: 20px; height: 20px; margin-right: 8px;">
-      <span>081181945</span>
-    </div>
-    <div style="margin: 8px 0;">
-      <img src="instagram.png" alt="Instagram" style="vertical-align: middle; width: 20px; height: 20px; margin-right: 8px;">
-      <span>@PTmonyet_terbang</span>
-    </div>
-    <p style="margin-top: 12px;">© 2025 PT Monyet Terbang. All rights reserved.</p>
+  <div class=kontak>
+  <h3>Hubungi kami di:</h3>
+    <div class="footertext"><img src="../assets/whatsapp.png">081181945</div>
+    <div class="footertext"><img src="../assets/instagram.png">@PTmonyet_terbang</div>
   </div>
-</footer>
+  <p>© 2025 PT Monyet Terbang. All rights reserved.</p>
+  </footer>
 </body>
 </html>
