--- a/html/infojadwal.html
+++ b/html/infojadwal.html
@@ -26,7 +26,7 @@
 </header>
 <main>
 <div class="banner"><h1>INFORMASI JADWAL KAPAL</h1></div>
-<title>Kapal PT. Monyet Terbang</title>
+<h1 style="text-align:center;">KAPAL PT. <span>MONYET</span> TERBANG</h1>
 <style>
   body {
     background-color: #fff8e7;
