--- a/index.html
+++ b/index.html
@@ -43,19 +43,19 @@
 <h1>Our Founders</h1>
   <div class="founderlist">
     <div class="founderbox">
-      <img src="assets/stephen.png">
+      <img src="assets/stephen.jpg">
       <h2 class="namebox">Stephen Wisno</h2>
     </div>
     <div class="founderbox">
-      <img src="assets/nathan.png">
+      <img src="assets/nathan.jpg">
       <h2 class="namebox">Nathanael Jay Wijaya</h2>
     </div>
     <div class="founderbox">
-      <img src="assets/kevin.png">
+      <img src="assets/kevin.jpg">
       <h2 class="namebox">Kevin Sebastian Viand Astono</h2>
     </div>
     <div class="founderbox">
-      <img src="assets/alex.png">
+      <img src="assets/alex.jpg">
       <h2 class="namebox">Christian Alexander Kasenda</h2>
     </div>
   </div>
@@ -88,10 +88,11 @@
   <img src="">
   <div>
     <h1>Visi PT Monyet Terbang</h1>
-    <h3>Menjadi perusahaan pelayaran terdepan di bagian Tengah Indonesia (Jawa Tengah, Kalimantan, Sulawesi, NTB, dan Bali) yang dikenal karena layanan yang gesit, pengalaman perjalanan yang menyenangkan, dan kontribusi nyata dalam memajukan konektivitas antar wilayah.</h3>
+    <h3 style="max-width:500px;">Menjadi perusahaan pelayaran terdepan di bagian Tengah Indonesia (Jawa Tengah, Kalimantan, Sulawesi, NTB, dan Bali) yang dikenal karena layanan yang gesit, pengalaman perjalanan yang menyenangkan, dan kontribusi nyata dalam memajukan konektivitas antar wilayah.</h3>
   </div>
 </section>
-<section class="visi">
+<div class="line"></div>
+<section class="visi" style="flex-direction:column;">
   <h1>Misi PT. Monyet Terbang</h1>
   <ol>
     <li>Kecepatan dan Keandalan Logistik</li>
@@ -106,16 +107,17 @@
     <h3>Berperan aktif sebagai jembatan ekonomi yang menyeimbangkan perdagangan, membantu komoditas lokal dari timur menjangkau pasar di barat, dan sebaliknya.</h3>
   </ol>
 </section>
-  <section class="visi" style="flex-direction:column;">
+<div class="line"></div>
+  <section class="visi" style="flex-direction: column;">
     <h1>Tujuan PT.Monyet Terbang</h1>
     <div class="founderlist">
-    <div class="founderbox"><img src="assets/banner.jpg">
+    <div class="founderbox"><img src="assets/banner.jpg" style="width:300px;height:200px;margin-left:-25px;">
       <h2>Jaringan & Konektivitas</h2>
       <h4>Menjadi operator pelayaran pilihan yang paling diandalkan dalam menciptakan koneksi tanpa hambatan antara Jawa Tengah, Kalimantan, Sulawesi, NTB, dan Bali, sehingga pergerakan masyarakat dan distribusi barang esensial berlangsung lancar dan cepat.</h3></div>
-      <div class="founderbox"><img src="assets/banner.jpg">
+      <div class="founderbox"><img src="assets/banner.jpg" style="width:300px;height:200px;margin-left:-25px;">
       <h2>Pelayanan & Pengalaman</h2>
       <h4>Menyediakan fasilitas dan layanan di atas kapal yang dirancang khusus untuk memastikan penumpang merasa santai, nyaman, dan terhibur selama perjalanan jarak jauh, menghilangkan stigma perjalanan laut yang melelahkan.</h3></div>
-      <div class="founderbox"><img src="assets/banner.jpg">
+      <div class="founderbox"><img src="assets/banner.jpg" style="width:300px;height:200px;margin-left:-25px;">
       <h2>Dampak Sosial & Budaya</h2>
       <h4>Menyediakan ruang dan waktu di kapal untuk mempromosikan dan menampilkan seni, kuliner, dan budaya lokal dari lima wilayah yang dilalui (Jawa, Kalimantan, Sulawesi, NTB, Bali) sebagai bagian dari pengalaman perjalanan.</h3></div>
     </div>
