--- a/html/infojadwal.html
+++ b/html/infojadwal.html
@@ -160,13 +160,16 @@
 <br><br><br><br>
 </main>
 <footer id="footer">
-  <div class=kontak>
-  <h3>Hubungi kami di:</h3>
-    <div class="footertext"><img src="../assets/whatsapp.png">081181945</div>
+  <hr style="border: 1.5px solid black; width: 80%; margin: 20px auto;">
+  <div style="text-align: center; background-color: #fdf7e9; padding: 10px 0;">
+    <h3 style="margin: 5px 0;">Hubungi kami di:</h3>
+    <div style="margin: 8px 0;">
+      <div class="footertext"><img src="../assets/whatsapp.png">081181945</div>
     <div class="footertext"><img src="../assets/instagram.png">@PTmonyet_terbang</div>
+    </div>
+    <p style="margin-top: 12px;">© 2025 PT Monyet Terbang. All rights reserved.</p>
   </div>
-  <p>© 2025 PT Monyet Terbang. All rights reserved.</p>
-  </footer>
+</footer>
 </body>
 </html>
 
