--- a/html/infojadwal.html
+++ b/html/infojadwal.html
@@ -25,7 +25,7 @@
   </nav>
 </header>
 <main>
-<div class="banner"><h1>INFORMASI JADWAL KAPAL</h1></div>
+<div class="banner"><h1>Informasi Jadwal Kapal</h1></div>
 <style>
   body {
     background-color: #fff8e7;
@@ -57,8 +57,7 @@
 </style>
 </head>
 <body>
-<h1 style="text-align:center;">KAPAL PT. <span>MONYET</span> TERBANG</h1>
-
+<br>
 <h2>PZE TERBANG</h2>
 <table>
   <thead>
@@ -160,16 +159,13 @@
 <br><br><br><br>
 </main>
 <footer id="footer">
-  <hr style="border: 1.5px solid black; width: 80%; margin: 20px auto;">
-  <div style="text-align: center; background-color: #fdf7e9; padding: 10px 0;">
-    <h3 style="margin: 5px 0;">Hubungi kami di:</h3>
-    <div style="margin: 8px 0;">
-      <div class="footertext"><img src="../assets/whatsapp.png">081181945</div>
+  <div class=kontak>
+  <h3>Hubungi kami di:</h3>
+    <div class="footertext"><img src="../assets/whatsapp.png">081181945</div>
     <div class="footertext"><img src="../assets/instagram.png">@PTmonyet_terbang</div>
-    </div>
-    <p style="margin-top: 12px;">© 2025 PT Monyet Terbang. All rights reserved.</p>
   </div>
-</footer>
+  <p>© 2025 PT Monyet Terbang. All rights reserved.</p>
+  </footer>
 </body>
 </html>
 
