--- a/html/layanan.html
+++ b/html/layanan.html
@@ -27,24 +27,73 @@
 <main>
 <div class="banner"><h1>Layanan</h1></div>
 <section class="layanan">
-  <h1>Jenis Layanan</h1>
+  <h1>Ruang Lingkup Usaha</h1>
   <div class="founderlist">
   <div class="founderbox">
-    <img src="../assets/banner.jpg" style="height:200px;width:350px;">
+    <img src="../assets/banner.jpg" style="height:200px;width:300px;">
     <h2 style="color:black;">Angkutan Laut</h2>
     <h3>Ruang lingkup usaha Flying Monkey Shipping mencakup penyediaan layanan transportasi maritim Kargo (logistik antar-pulau) dan Penumpang (pelayaran reguler dan pesiar) yang berfokus pada peningkatan efisiensi, akurasi, dan kenyamanan di koridor regional Indonesia Tengah.</h3>
   </div>
     <div class="founderbox">
-    <img src="../assets/banner.jpg" style="height:200px;width:350px;">
+    <img src="../assets/banner.jpg" style="height:200px;width:300px;">
     <h2 style="color:black;">Kapal Pesiar</h2>
       <h3>Penyediaan layanan transportasi dan rekreasi mewah (pariwisata bahari) dengan fokus pada pengalaman, kenyamanan, hiburan, dan penjelajahan destinasi-destinasi unggulan seperti Bali, Lombok (NTB), dan Semarang, melayani penumpang dalam kelas Ekonomi, Bisnis, dan First Class.</h3>
   </div>
     <div class="founderbox">
-    <img src="../assets/banner.jpg" style="height:200px;width:350px;">
+    <img src="../assets/banner.jpg" style="height:200px;width:300px;">
     <h2 style="color:black;">Business Process</h2>
       <h3>Flying Monkey Shipping (FMS) mampu menempatkan strategi perusahaan pada posisi yang terbaik serta melakukan pelayanan maksimal dan terjangkau bagi masyarakat luas. Kami melayani negeri dengan memberikan pelayanan terbaik bagi para pelanggan sebagai tamu kami yang terhormat.</h3>
   </div>
   </div>
+  </section>
+  <section class="layanan">
+  <h1>Konsep Layanan</h1>
+  <div class="founderlist">
+  <div class="founderbox">
+    <img src="../assets/banner.jpg" style="height:150px;width:150px;">
+    <h2 style="color:black;">Angkutan Laut</h2>
+    </div>
+    <div class="founderbox">
+    <img src="../assets/banner.jpg" style="height:150px;width:150px;">
+    <h2 style="color:black;">Kapal Pesiar</h2>
+  </div>
+    <div class="founderbox">
+    <img src="../assets/banner.jpg" style="height:150px;width:150px;">
+    <h2 style="color:black;">Business Process</h2>
+    </div>
+  </div>
+  </section>
+<section class="layanan">
+  <h1>Peta Rute</h1>
+<table style="width:80%;margin-left:0;">
+  <tr>
+    <td style="text-align:center;">
+      <img src="../assets/iconroute.png" class="mapimg">
+      <h2>PZE Terbang</h2>
+      <h3 class="tabletext">Kapal pesiar raksasa ini menciptakan koridor ekonomi baru, berlayar dari Balikpapan sebagai hub logistik Kalimantan Timur, melanjutkan ke Makassar sebagai pusat perdagangan Indonesia Timur, dan berakhir di Kalimantan Selatan untuk memperkuat konektivitas antar pulau. Rute ini dirancang untuk memadukan fungsi transportasi penumpang dan peran strategis dalam menopang arus barang dan jasa di kawasan tengah Indonesia.</h3>
+    </td>
+    <td style="text-align:center;">
+      <img src="../assets/starroute.png" class="mapimg">
+      <h2>RZL Terbang</h2>
+      <h3 class="tabletext">Kapal ini menghubungkan destinasi wisata unggulan dengan memulai pelayaran dari NTB, berlanjut menuju pulau ikonik Bali untuk menikmati pesona budaya dan alam, dan mengakhiri perjalanan besar di Semarang, gerbang Jawa Tengah. Rute ini dirancang khusus untuk membawa wisatawan menikmati keindahan bahari Nusantara sekaligus menyediakan sarana transportasi yang mewah dan berkapasitas sangat besar.</h3>
+    </td>
+  </tr>
+  
+  <tr>
+    <td style="text-align:center;">
+      <img src="../assets/kargo.png" class="mapimg">
+      <h2>KZG Terbang</h2>
+      <h3 class="tabletext">Kapal mewah ini didesain untuk menghubungkan Barat dan Timur Nusantara, memulai pelayaran dari Pontianak di Kalimantan untuk menarik wisatawan dari wilayah tersebut, lalu melintasi laut menuju dua permata pariwisata Indonesia, yaitu Bali dan Lombok, untuk menawarkan pengalaman liburan pulau yang tak terlupakan. Rute ini menyeimbangkan antara mobilitas regional dan daya tarik destinasi wisata bahari kelas dunia.</h3>
+    </td>
+    <td style="text-align:center;">
+      <img src="../assets/irinaroute.png" class="mapimg">
+      <h2>MSC Oreo</h2>
+      <h3 class="tabletext">Kapal kargo MSC Irina melayani jalur logistik vital yang menghubungkan Pontianak dan Balikpapan di Kalimantan dengan pusat perdagangan Makassar di Sulawesi, melewati Kalimantan Selatan untuk optimalisasi muatan. Layanan ini menawarkan solusi pengiriman kontainer yang efisien dengan tarif tetap Rp 5.000.000 per kontainer, mendukung kelancaran distribusi barang di Indonesia bagian tengah.</h3>
+    </td>
+  </tr>
+</table>
+</section>
+
 <br><br><br><br>
 </main>
 <footer id="footer">
