--- a/html/galeri.html
+++ b/html/galeri.html
@@ -25,28 +25,12 @@
   </nav>
 </header>
 <main>
-<div class="banner"><h1>GALERI</h1></div>
-<h1 style="text-align:center;">KAPAL PT. <span>MONYET</span> TERBANG</h1>
+<div class="banner"><h1>Galeri</h1></div>
 <style>
-  body {
-    background-color: #f7f2e3;
-    font-family: Georgia, serif;
-    padding: 15px;
-  }
-  h1 {
-    font-size: 36px;
-    font-weight: normal;
-    margin-bottom: 10px;
-  }
-  h1 span {
+  span {
     text-decoration: underline;
     text-decoration-color: red;
     text-underline-offset: 5px;
-  }
-  table {
-    width: 100%;
-    border-collapse: collapse;
-    margin-bottom: 15px;
   }
   td {
     vertical-align: top;
@@ -83,7 +67,7 @@
     text-underline-offset: 4px;
   }
   .trophy {
-    width: 100%;
+    width: 80%;
     border-collapse: collapse;
   }
   .trophy td {
@@ -92,51 +76,43 @@
     vertical-align: top;
     text-align: center;
   }
-  .trophy img {
-    width: 90%;
-    max-width: 290px;
-    height: auto;
-  }
-  .trophy h3 {
-    font-family: 'Comic Sans MS', cursive;
-    margin: 7px 0 5px 0;
-  }
-  .trophy p {
-    font-size: 13px;
-    text-align: justify;
-    margin: 3px 10px 0 10px;
+  .trophyimg{
+    height:200px; 
+    width:300px;
+    border-radius:10px;
   }
 </style>
-</head>
-<body>
-<br><br><br><br>
-<h1>KAPAL PT. <span>MONYET</span> TERBANG</h1>
+<br>
+<h1 style="margin-left:10px;">Armada PT. <span>Monyet</span> Terbang</h1>
 
 <table>
   <tr>
     <td style="text-align:center;">
-      <img src="../assets/sea.png" alt="PZE Terbang" style="height:165px; width:280px; border-radius:10px;">
+      <img src="../assets/sea.png" class="trophyimg">
       <br><strong>PZE TERBANG</strong><br>
       Economy : 5900 orang<br>
       Business : 800 orang<br>
       First-Class : 300 orang
     </td>
     <td style="text-align:center;">
-      <img src="../assets/star.png" alt="RZL Terbang" style="height:165px; width:280px; border-radius:10px;">
+      <img src="../assets/star.png" class="trophyimg">
       <br><strong>RZL TERBANG</strong><br>
       Economy : 6400 orang<br>
       Business : 900 orang<br>
       First-Class : 300 orang
     </td>
+  </tr>
+  
+  <tr>
     <td style="text-align:center;">
-      <img src="../assets/topia.png" alt="KZG Terbang" style="height:165px; width:280px; border-radius:10px;">
+      <img src="../assets/topia.png" class="trophyimg">
       <br><strong>KZG TERBANG</strong><br>
       Economy : 4700 orang<br>
       Business : 600 orang<br>
       First-Class : 300 orang
     </td>
     <td style="text-align:center;">
-      <img src="../assets/kargo.png" alt="MSC Oreo" style="height:165px; width:280px; border-radius:10px;">
+      <img src="../assets/kargo.png" class="trophyimg">
       <br><strong>MSC OREO</strong><br>
       Kapasitas Kargo : 24.000 kontainer<br>
       Panjang 400 meter<br>
@@ -152,17 +128,17 @@
 <table class="trophy">
   <tr>
     <td style="text-align:center;">
-      <img src="../assets/sea.png" alt="PZE Terbang" style="height:165px; width:280px; border-radius:10px;">
+      <img src="../assets/sea.png" class="trophyimg">
       <h3>JUARA NASIONAL SHIP 2025</h3>
       <p>Flying Monkey Shipping (FMS) meraih Juara Nasional SHIP 2025 karena berhasil menjadi pionir Maritim 4.0 di Indonesia, menggabungkan efisiensi logistik 98%-On-Time Performance (OTP) melalui FocusTrac-K dengan layanan penumpang Humanis yang unik melalui Panggung Budaya Nusantara.</p>
     </td>
     <td style="text-align:center;">
-      <img src="../assets/star.png" alt="RZL Terbang" style="height:165px; width:280px; border-radius:10px;">
+      <img src="../assets/star.png" class="trophyimg">
       <h3>THE BEST SHIP</h3>
       <p>MSC Irina (milik FMS) memenangkan penghargaan "The Best Ship 2025" berkat integritas struktur dan keandalan mesin yang luar biasa yang menjamin keamanan maksimum penumpang dan kargo di seluruh rute regional, sekaligus unggul dalam efisiensi bahan bakar dan kepatuhan lingkungan maritim.</p>
     </td>
     <td style="text-align:center;">
-      <img src="../assets/topia.png" alt="KZG Terbang" style="height:165px; width:280px; border-radius:10px;">
+      <img src="../assets/topia.png"class="trophyimg">
       <h3>KAPAL GEN-Z #1</h3>
       <p>Utopia Of The Seas (FMS) meraih penghargaan Kapal Terbaik tahun 2025 karena sukses diubah menjadi Kapal Generasi Z (#1) yang berkelanjutan, di mana desain mewah berkapasitas 5.600 orang kini terintegrasi penuh dengan konektivitas 5G, dan lainnya.</p>
     </td>
