--- a/html/infojadwal.html
+++ b/html/infojadwal.html
@@ -25,14 +25,8 @@
   </nav>
 </header>
 <main>
-<div class="banner"><h1>Informasi Jadwal Kapal</h1></div>
+<div class="banner" style="font-family:Georgia, 'Times New Roman', Times, serif"><h1>Informasi Jadwal Kapal</h1></div>
 <style>
-  body {
-    background-color: #fff8e7;
-    font-family: Arial, sans-serif;
-    color: #000;
-    padding: 20px;
-  }
   h2 {
     font-family: 'Arial Black', Gadget, sans-serif;
     font-weight: bold;
@@ -40,9 +34,10 @@
     margin-bottom: 10px;
   }
   table {
-    width: 100%;
+    width: 90%;
     border-collapse: collapse;
-    margin-bottom: 40px;
+    margin: 40px;
+    margin-top:20px;
     background-color: white;
     box-shadow: 0 0 8px rgba(0, 0, 0, 0.1);
   }
@@ -56,7 +51,7 @@
   }
 </style>
 </head>
-<body>
+<body style="font-family: Arial, sans-serif;">
 <br>
 <h2>PZE TERBANG</h2>
 <table>
@@ -122,11 +117,11 @@
   </thead>
   <tbody>
     <tr><td>1</td><td>Registrasi Masuk</td><td>2 jam</td><td>18:00</td><td>20:00</td></tr>
-    <tr><td>1, 2, Dan 3</td><td>Perjalanan</td><td>41 jam</td><td>20:00</td><td>13:00</td></tr>
+    <tr><td>1, 2, dan 3</td><td>Perjalanan</td><td>41 jam</td><td>20:00</td><td>13:00</td></tr>
     <tr><td>3</td><td>Menurunkan Penumpang</td><td>1 Jam</td><td>13:00</td><td>14:00</td></tr>
     <tr><td>3</td><td>Eksplorasi</td><td>6 Jam</td><td>14:00</td><td>20:00</td></tr>
     <tr><td>3</td><td>Registrasi masuk kembali</td><td>2 jam</td><td>20:00</td><td>22:00</td></tr>
-    <tr><td>3 Dan 4</td><td>Perjalanan</td><td>6 jam</td><td>22:00</td><td>04:00</td></tr>
+    <tr><td>3 dan 4</td><td>Perjalanan</td><td>6 jam</td><td>22:00</td><td>04:00</td></tr>
     <tr><td>4</td><td>Menurunkan Penumpang</td><td>1 Jam</td><td>07:00</td><td>08:00</td></tr>
     <tr><td>4</td><td>Eksplorasi</td><td>9 jam</td><td>08:00</td><td>17:00</td></tr>
     <tr><td>4</td><td>Registrasi masuk kembali</td><td>2 jam</td><td>17:00</td><td>19:00</td></tr>
@@ -146,14 +141,14 @@
     </tr>
   </thead>
   <tbody>
-    <tr><td>1 Dan 2</td><td>Pengangkutan Kargo</td><td>24 jam</td><td>08:00</td><td>08:00</td></tr>
+    <tr><td>1 dan 2</td><td>Pengangkutan Kargo</td><td>24 jam</td><td>08:00</td><td>08:00</td></tr>
     <tr><td>2,3,dan 4</td><td>Perjalanan</td><td>60 jam</td><td>08:00</td><td>20:00</td></tr>
-    <tr><td>4 Dan 5</td><td>Pengangkutan Kargo</td><td>24 Jam</td><td>20:00</td><td>20:00</td></tr>
-    <tr><td>5 Dan 6</td><td>Perjalanan</td><td>8 Jam</td><td>20:00</td><td>04:00</td></tr>
-    <tr><td>6 Dan 7</td><td>Pengangkutan Kargo</td><td>24 jam</td><td>04:00</td><td>04:00</td></tr>
+    <tr><td>4 dan 5</td><td>Pengangkutan Kargo</td><td>24 Jam</td><td>20:00</td><td>20:00</td></tr>
+    <tr><td>5 dan 6</td><td>Perjalanan</td><td>8 Jam</td><td>20:00</td><td>04:00</td></tr>
+    <tr><td>6 dan 7</td><td>Pengangkutan Kargo</td><td>24 jam</td><td>04:00</td><td>04:00</td></tr>
     <tr><td>7</td><td>Perjalanan</td><td>15 jam</td><td>04:00</td><td>19:00</td></tr>
-    <tr><td>7 Dan 8</td><td>Penurunan Kargo Kapal</td><td>24 Jam</td><td>19:00</td><td>19:00</td></tr>
-    <tr><td>8, 9, Dan 10</td><td>Perjalanan Balik</td><td>36 jam</td><td>19:00</td><td>07:00</td></tr>
+    <tr><td>7 dan 8</td><td>Penurunan Kargo Kapal</td><td>24 Jam</td><td>19:00</td><td>19:00</td></tr>
+    <tr><td>8, 9, dan 10</td><td>Perjalanan Balik</td><td>36 jam</td><td>19:00</td><td>07:00</td></tr>
   </tbody>
 </table>
 <br><br><br><br>
