fixed infojadwal from wrong font

--- a/html/layanan.html
+++ b/html/layanan.html
@@ -51,15 +51,15 @@
   <div class="founderlist">
   <div class="founderbox">
     <img src="../assets/banner.jpg" style="height:150px;width:150px;">
-    <h2 style="color:black;">Angkutan Laut</h2>
+    <h2 style="color:black;">Hiburan</h2>
     </div>
     <div class="founderbox">
     <img src="../assets/banner.jpg" style="height:150px;width:150px;">
-    <h2 style="color:black;">Kapal Pesiar</h2>
+    <h2 style="color:black;">Tepat Waktu</h2>
   </div>
     <div class="founderbox">
     <img src="../assets/banner.jpg" style="height:150px;width:150px;">
-    <h2 style="color:black;">Business Process</h2>
+    <h2 style="color:black;">Kenyamanan</h2>
     </div>
   </div>
   </section>
@@ -93,7 +93,28 @@
   </tr>
 </table>
 </section>
+<section class="layanan">
+  <h1>Kantor Cabang</h1>
+  <table class="kantor">
+  <thead>
+    <tr>
+      <th>Kota</th>
+      <th>Alamat</th>
+      <th>kontak</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr><td>Pontianak</td><td>Jalan Hassanudin</td><td>0069-6967-2345</td></tr>
+    <tr><td>Semarang</td><td>Jalan Ronggowarsito</td><td>9090-2938-4556</td></tr>
+    <tr><td>Bali</td><td>Jalan Raya Pelabuhan Benoa</td><td>3730-3745-1937</td></tr>
+    <tr><td>NTB</td><td>Jalan Dato Kedaro</td><td>1946-4648-5568</td></tr>
+    <tr><td>Makassar</td><td>Jalan Ahmad Yani</td><td>1284-6678-8890</td></tr>
+    <tr><td>Kalsel</td><td>Jalan Barito Hilir</td><td>1246-6657-6789</td></tr>
+    <tr><td>Balikpapan</td><td>Jalan Yos Sudarso</td><td>8867-7789-1234</td></tr>
+  </tbody>
+</table>
 
+</section>
 <br><br><br><br>
 </main>
 <footer id="footer">
