--- a/html/infojadwal.html
+++ b/html/infojadwal.html
@@ -24,10 +24,10 @@
     <a href="#footer">Hubungi Kami</a>
   </nav>
 </header>
-<main>
-<div class="banner" style="font-family:Georgia, 'Times New Roman', Times, serif"><h1>Informasi Jadwal Kapal</h1></div>
+<main style="font-family: Arial, sans-serif;">
+<div class="banner"><h1>Informasi Jadwal Kapal</h1></div>
 <style>
-  h2 {
+  main h2 {
     font-family: 'Arial Black', Gadget, sans-serif;
     font-weight: bold;
     margin-top: 40px;
@@ -51,7 +51,6 @@
   }
 </style>
 </head>
-<body style="font-family: Arial, sans-serif;">
 <br>
 <h2>PZE TERBANG</h2>
 <table>
