--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
     <img src="assets/logo.png" alt="Logo" class="logo">
   </div>
   <div class="collage">
-    <img src="assets/banner.jpg" style="margin-left:135px;">
-    <div  style="margin-left:10px;"><img src="assets/banner.jpg"><img src="assets/banner.jpg"></div>
+    <img src="assets/index.jpeg" style="margin-left:135px;">
+    <div  style="margin-left:10px;"><img src="assets/index2.jpg"><img src="assets/index3.jpg"></div>
     <img src="assets/banner.jpg" style="margin-left:135px;">
   </div>
 </section>
@@ -111,13 +111,13 @@
   <section class="visi" style="flex-direction: column;">
     <h1>Tujuan PT.Monyet Terbang</h1>
     <div class="founderlist">
-    <div class="founderbox"><img src="assets/banner.jpg" style="width:300px;height:200px;margin-left:-25px;">
+    <div class="founderbox"><img src="assets/konektivitas.jpg" style="width:300px;height:200px;margin-left:-25px;">
       <h2>Jaringan & Konektivitas</h2>
       <h4>Menjadi operator pelayaran pilihan yang paling diandalkan dalam menciptakan koneksi tanpa hambatan antara Jawa Tengah, Kalimantan, Sulawesi, NTB, dan Bali, sehingga pergerakan masyarakat dan distribusi barang esensial berlangsung lancar dan cepat.</h3></div>
-      <div class="founderbox"><img src="assets/banner.jpg" style="width:300px;height:200px;margin-left:-25px;">
+      <div class="founderbox"><img src="assets/fun.jpg" style="width:300px;height:200px;margin-left:-25px;">
       <h2>Pelayanan & Pengalaman</h2>
       <h4>Menyediakan fasilitas dan layanan di atas kapal yang dirancang khusus untuk memastikan penumpang merasa santai, nyaman, dan terhibur selama perjalanan jarak jauh, menghilangkan stigma perjalanan laut yang melelahkan.</h3></div>
-      <div class="founderbox"><img src="assets/banner.jpg" style="width:300px;height:200px;margin-left:-25px;">
+      <div class="founderbox"><img src="assets/budaya.jpg" style="width:300px;height:200px;margin-left:-25px;">
       <h2>Dampak Sosial & Budaya</h2>
       <h4>Menyediakan ruang dan waktu di kapal untuk mempromosikan dan menampilkan seni, kuliner, dan budaya lokal dari lima wilayah yang dilalui (Jawa, Kalimantan, Sulawesi, NTB, Bali) sebagai bagian dari pengalaman perjalanan.</h3></div>
     </div>
