--- a/html/layanan.html
+++ b/html/layanan.html
@@ -46,6 +46,37 @@
   </div>
   </div>
   </section>
+
+
+
+  
+  <div class="collage">
+    <img src="assets/index.jpeg" style="margin-left:135px;">
+    <img src="assets/banner.jpg" style="margin-left:135px;">
+  </div>
+</section>
+<section class="founder">
+<h1>Our Founders</h1>
+  <div class="founderlist">
+    <div class="founderbox">
+      <img src="../assets/banner.jpg" style="height:150px;width:150px;">
+      <h2 class="namebox">Hiburan</h2>
+    </div>
+    <div class="founderbox">
+      <img src="../assets/banner.jpg" style="height:150px;width:150px;">
+      <h2 class="namebox">Tepat Waktu</h2>
+    </div>
+    <div class="founderbox">
+      <img src="../assets/banner.jpg" style="height:150px;width:150px;">
+      <h2 class="namebox">Kenyamanan</h2>
+    </div>
+  </div>
+</section>
+
+
+
+
+  
   <section class="layanan">
   <h1>Konsep Layanan</h1>
   <div class="founderlist">
