--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
     <img src="assets/logo.png" alt="Logo" class="logo">
   </div>
   <div class="collage">
-    <img src="assets/index.jpeg" style="margin-left:135px;">
-    <img src="assets/banner.jpg" style="margin-left:135px;">
+    <img src="assets/index.jpeg">
+    <img src="assets/banner.jpg">
   </div>
 </section>
 <section class="founder">
