--- a/html/layanan.html
+++ b/html/layanan.html
@@ -48,7 +48,10 @@
   </section>
 
 
-
+ <div class="collage">
+    <img src="assets/index.jpeg">
+    <img src="assets/banner.jpg">
+  </div>
 </section>
   <section class="layanan">
   <h1>Konsep Layanan</h1>
