--- a/html/layanan.html
+++ b/html/layanan.html
@@ -53,24 +53,23 @@
     <img src="assets/banner.jpg">
   </div>
 </section>
-  <section class="layanan">
-  <h1>Konsep Layanan</h1>
+<section class="founder">
+<h1>Our Founders</h1>
   <div class="founderlist">
-  <div class="founderbox">
-      <img src="../assets/banner.jpg" style="height:150px;width:150px;">
+    <div class="founderbox">
+      <img src="assets/stephen.jpg">
       <h2 class="namebox">Hiburan</h2>
     </div>
     <div class="founderbox">
-      <img src="../assets/banner.jpg" style="height:150px;width:150px;">
+      <img src="assets/nathan.jpg">
       <h2 class="namebox">Tepat Waktu</h2>
     </div>
     <div class="founderbox">
-      <img src="../assets/banner.jpg" style="height:150px;width:150px;">
+      <img src="assets/kevin.jpg">
       <h2 class="namebox">Kenyamanan</h2>
     </div>
   </div>
 </section>
-
 
 
 
