--- a/index.html
+++ b/index.html
@@ -87,11 +87,13 @@
   <img src="">
   <div>
     <h1>Visi PT Monyet Terbang</h1>
+      <img src="assets/docking.jpg">
     <h3 style="max-width:500px;">Menjadi perusahaan pelayaran terdepan di bagian Tengah Indonesia (Jawa Tengah, Kalimantan, Sulawesi, NTB, dan Bali) yang dikenal karena layanan yang gesit, pengalaman perjalanan yang menyenangkan, dan kontribusi nyata dalam memajukan konektivitas antar wilayah.</h3>
   </div>
 </section>
 <div class="line"></div>
 <section class="visi" style="flex-direction:column;">
+  <img src="assets/cargo2.png">
   <h1>Misi PT. Monyet Terbang</h1>
   <ol>
     <li>Kecepatan dan Keandalan Logistik</li>
