--- a/html/layanan.html
+++ b/html/layanan.html
@@ -49,14 +49,13 @@
 
 
  <div class="collage">
-    <img src="assets/index.jpeg">
     <img src="assets/banner.jpg">
   </div>
 </section>
-<section class="founder">
-<h1>Our Founders</h1>
+  <section class="layanan">
+  <h1>Konsep Layanan</h1>
   <div class="founderlist">
-    <div class="founderbox">
+  <div class="founderbox">
       <img src="assets/stephen.jpg">
       <h2 class="namebox">Hiburan</h2>
     </div>
