--- a/html/layanan.html
+++ b/html/layanan.html
@@ -52,7 +52,7 @@
     <img src="assets/banner.jpg">
   </div>
 </section>
-  <section class="layanan">
+  <section class="founder">
   <h1>Konsep Layanan</h1>
   <div class="founderlist">
   <div class="founderbox">
@@ -72,24 +72,8 @@
 
 
 
+
   
-  <section class="layanan">
-  <h1>Konsep Layanan</h1>
-  <div class="founderlist">
-  <div class="founderbox">
-    <img src="../assets/banner.jpg" style="height:150px;width:150px;">
-    <h2 style="color:black;">Hiburan</h2>
-    </div>
-    <div class="founderbox">
-    <img src="../assets/banner.jpg" style="height:150px;width:150px;">
-    <h2 style="color:black;">Tepat Waktu</h2>
-  </div>
-    <div class="founderbox">
-    <img src="../assets/banner.jpg" style="height:150px;width:150px;">
-    <h2 style="color:black;">Kenyamanan</h2>
-    </div>
-  </div>
-  </section>
 <section class="layanan">
   <h1>Peta Rute</h1>
 <table style="width:80%;margin-left:0;">
