--- a/html/layanan.html
+++ b/html/layanan.html
@@ -56,15 +56,15 @@
   <h1>Konsep Layanan</h1>
   <div class="founderlist">
   <div class="founderbox">
-      <img src="assets/stephen.jpg">
+      <img src="../assets/banner.jpg">
       <h2 class="namebox">Hiburan</h2>
     </div>
     <div class="founderbox">
-      <img src="assets/nathan.jpg">
+      <img src="../assets/banner.jpg">
       <h2 class="namebox">Tepat Waktu</h2>
     </div>
     <div class="founderbox">
-      <img src="assets/kevin.jpg">
+      <img src="../assets/banner.jpg">
       <h2 class="namebox">Kenyamanan</h2>
     </div>
   </div>
