--- a/html/layanan.html
+++ b/html/layanan.html
@@ -47,31 +47,23 @@
   </div>
   </section>
 
-
- <div class="collage">
-    <img src="assets/banner.jpg">
-  </div>
-</section>
-  <section class="founder">
+ <section class="layanan">
   <h1>Konsep Layanan</h1>
   <div class="founderlist">
   <div class="founderbox">
-      <img src="../assets/banner.jpg">
-      <h2 class="namebox">Hiburan</h2>
+    <img src="../assets/banner.jpg" style="height:150px;width:150px;">
+    <h2 style="color:black;">Hiburan</h2>
     </div>
     <div class="founderbox">
-      <img src="../assets/banner.jpg">
-      <h2 class="namebox">Tepat Waktu</h2>
-    </div>
+    <img src="../assets/banner.jpg" style="height:150px;width:150px;">
+    <h2 style="color:black;">Tepat Waktu</h2>
+  </div>
     <div class="founderbox">
-      <img src="../assets/banner.jpg">
-      <h2 class="namebox">Kenyamanan</h2>
+    <img src="../assets/banner.jpg" style="height:150px;width:150px;">
+    <h2 style="color:black;">Kenyamanan</h2>
     </div>
   </div>
-</section>
-
-
-
+  </section>
 
   
 <section class="layanan">
