--- a/html/layanan.html
+++ b/html/layanan.html
@@ -84,14 +84,14 @@
   
   <tr>
     <td style="text-align:center;">
-      <img src="../assets/kargo.png" class="mapimg">
+      <img src="../assets/kzg.png" class="mapimg">
       <h2>KZG Terbang</h2>
       <h3 class="tabletext">Kapal mewah ini didesain untuk menghubungkan Barat dan Timur Nusantara, memulai pelayaran dari Pontianak di Kalimantan untuk menarik wisatawan dari wilayah tersebut, lalu melintasi laut menuju dua permata pariwisata Indonesia, yaitu Bali dan Lombok, untuk menawarkan pengalaman liburan pulau yang tak terlupakan. Rute ini menyeimbangkan antara mobilitas regional dan daya tarik destinasi wisata bahari kelas dunia.</h3>
     </td>
     <td style="text-align:center;">
       <img src="../assets/irinaroute.png" class="mapimg">
       <h2>MSC Oreo</h2>
-      <h3 class="tabletext">Kapal kargo MSC Irina melayani jalur logistik vital yang menghubungkan Pontianak dan Balikpapan di Kalimantan dengan pusat perdagangan Makassar di Sulawesi, melewati Kalimantan Selatan untuk optimalisasi muatan. Layanan ini menawarkan solusi pengiriman kontainer yang efisien dengan tarif tetap Rp 5.000.000 per kontainer, mendukung kelancaran distribusi barang di Indonesia bagian tengah.</h3>
+      <h3 class="tabletext">Kapal kargo MSC Oreo melayani jalur logistik vital yang menghubungkan Pontianak dan Balikpapan di Kalimantan dengan pusat perdagangan Makassar di Sulawesi, melewati Kalimantan Selatan untuk optimalisasi muatan. Layanan ini menawarkan solusi pengiriman kontainer yang efisien dengan tarif tetap Rp 5.000.000 per kontainer, mendukung kelancaran distribusi barang di Indonesia bagian tengah.</h3>
     </td>
   </tr>
 </table>
