--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
   </div>
   <div class="collage">
     <img src="assets/index.jpeg">
-    <img src="assets/banner.jpg">
+    <img src="assets/Desain.png">
   </div>
 </section>
 <section class="founder">
