--- a/index.html
+++ b/index.html
@@ -96,14 +96,18 @@
   <img src="assets/cargo2.png">
   <h1>Misi PT. Monyet Terbang</h1>
   <ol>
+    <div class="text>
     <li>Kecepatan dan Keandalan Logistik</li>
     <h3>Menyediakan layanan kargo yang sangat efisien dan terencana, menjamin barang kiriman tiba tepat waktu, aman, dan meminimalkan keterlambatan.</h3>
     <li>Pengalaman Penumpang Unik</li>
     <h3>Menciptakan pengalaman pelayaran yang tidak membosankan dan nyaman, aman, seru, menyenangkan (anti pusing), serta mengutamakan keselamatan dan keramahan bagi setiap penumpang.</h3>
+    </div>
     <li>Pengembangan Jaringan</li>
+    <div class="text">
     <h3>Terus memperluas dan mengoptimalkan rute pelayaran antar-pulau (Jawa Tengah, Kalimantan, Sulawesi, NTB, Bali) untuk mendukung distribusi barang dan pergerakan masyarakat.</h3>
     <li>Inovasi dan Efisiensi</li>
     <h3>Mengadopsi teknologi pelayaran dan logistik terkini untuk meningkatkan efisiensi operasional dan mengurangi dampak lingkungan.</h3>
+    </div>
     <li>Penggerak Ekonomi Regional</li>
     <h3>Berperan aktif sebagai jembatan ekonomi yang menyeimbangkan perdagangan, membantu komoditas lokal dari timur menjangkau pasar di barat, dan sebaliknya.</h3>
   </ol>
