--- a/index.html
+++ b/index.html
@@ -96,7 +96,8 @@
   <img src="assets/cargo2.png">
   <h1>Misi PT. Monyet Terbang</h1>
   <ol>
-    <div class="text>
+    <div class="textcontain">
+    <div class="text">
     <li>Kecepatan dan Keandalan Logistik</li>
     <h3>Menyediakan layanan kargo yang sangat efisien dan terencana, menjamin barang kiriman tiba tepat waktu, aman, dan meminimalkan keterlambatan.</h3>
     <li>Pengalaman Penumpang Unik</li>
@@ -108,9 +109,11 @@
     <li>Inovasi dan Efisiensi</li>
     <h3>Mengadopsi teknologi pelayaran dan logistik terkini untuk meningkatkan efisiensi operasional dan mengurangi dampak lingkungan.</h3>
     </div>
-    <li>Penggerak Ekonomi Regional</li>
+    </div>
+      <li>Penggerak Ekonomi Regional</li>
     <h3>Berperan aktif sebagai jembatan ekonomi yang menyeimbangkan perdagangan, membantu komoditas lokal dari timur menjangkau pasar di barat, dan sebaliknya.</h3>
-  </ol>
+    
+    </ol>
 </section>
 <div class="line"></div>
   <section class="visi" style="flex-direction: column;">
