--- a/html/layanan.html
+++ b/html/layanan.html
@@ -71,7 +71,7 @@
 <table style="width:80%;margin-left:0;">
   <tr>
     <td style="text-align:center;">
-      <img src="../assets/iconroute.png" class="mapimg">
+      <img src="../assets/Iconroute.png" class="mapimg">
       <h2>PZE Terbang</h2>
       <h3 class="tabletext">Kapal pesiar raksasa ini menciptakan koridor ekonomi baru, berlayar dari Balikpapan sebagai hub logistik Kalimantan Timur, melanjutkan ke Makassar sebagai pusat perdagangan Indonesia Timur, dan berakhir di Kalimantan Selatan untuk memperkuat konektivitas antar pulau. Rute ini dirancang untuk memadukan fungsi transportasi penumpang dan peran strategis dalam menopang arus barang dan jasa di kawasan tengah Indonesia.</h3>
     </td>
@@ -89,7 +89,7 @@
       <h3 class="tabletext">Kapal mewah ini didesain untuk menghubungkan Barat dan Timur Nusantara, memulai pelayaran dari Pontianak di Kalimantan untuk menarik wisatawan dari wilayah tersebut, lalu melintasi laut menuju dua permata pariwisata Indonesia, yaitu Bali dan Lombok, untuk menawarkan pengalaman liburan pulau yang tak terlupakan. Rute ini menyeimbangkan antara mobilitas regional dan daya tarik destinasi wisata bahari kelas dunia.</h3>
     </td>
     <td style="text-align:center;">
-      <img src="../assets/irinaroute.png" class="mapimg">
+      <img src="../assets/Irinaroute.png" class="mapimg">
       <h2>MSC Oreo</h2>
       <h3 class="tabletext">Kapal kargo MSC Oreo melayani jalur logistik vital yang menghubungkan Pontianak dan Balikpapan di Kalimantan dengan pusat perdagangan Makassar di Sulawesi, melewati Kalimantan Selatan untuk optimalisasi muatan. Layanan ini menawarkan solusi pengiriman kontainer yang efisien dengan tarif tetap Rp 5.000.000 per kontainer, mendukung kelancaran distribusi barang di Indonesia bagian tengah.</h3>
     </td>
