--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   </nav>
 </header>
 <main>
-<div class="Desain"><h1>Beranda</h1></div>
+<div class="banner"><h1>Beranda</h1></div>
 <section>
   <div class="desc">
     <h1>PT MONYET TERBANG</h1>
@@ -35,7 +35,7 @@
   </div>
   <div class="collage">
     <img src="assets/index.jpeg">
-    <img src="assets/banner.png">
+    <img src="assets/banner.jpg">
   </div>
 </section>
 <section class="founder">
