--- a/index.html
+++ b/index.html
@@ -95,25 +95,31 @@
 <section class="visi" style="flex-direction:column;">
   <img src="assets/cargo2.png">
   <h1>Misi PT. Monyet Terbang</h1>
-  <ol>
-    <div class="textcontain">
-    <div class="text">
-    <li>Kecepatan dan Keandalan Logistik</li>
-    <h3>Menyediakan layanan kargo yang sangat efisien dan terencana, menjamin barang kiriman tiba tepat waktu, aman, dan meminimalkan keterlambatan.</h3>
-    <li>Pengalaman Penumpang Unik</li>
-    <h3>Menciptakan pengalaman pelayaran yang tidak membosankan dan nyaman, aman, seru, menyenangkan (anti pusing), serta mengutamakan keselamatan dan keramahan bagi setiap penumpang.</h3>
-    </div>
-    <li>Pengembangan Jaringan</li>
-    <div class="text">
-    <h3>Terus memperluas dan mengoptimalkan rute pelayaran antar-pulau (Jawa Tengah, Kalimantan, Sulawesi, NTB, Bali) untuk mendukung distribusi barang dan pergerakan masyarakat.</h3>
-    <li>Inovasi dan Efisiensi</li>
-    <h3>Mengadopsi teknologi pelayaran dan logistik terkini untuk meningkatkan efisiensi operasional dan mengurangi dampak lingkungan.</h3>
-    </div>
-    </div>
-      <li>Penggerak Ekonomi Regional</li>
-    <h3>Berperan aktif sebagai jembatan ekonomi yang menyeimbangkan perdagangan, membantu komoditas lokal dari timur menjangkau pasar di barat, dan sebaliknya.</h3>
-    
-    </ol>
+  <ol class="textcontain">
+  
+  <!-- Column 1 -->
+  <li class="text">
+    <h2>Kecepatan dan Keandalan Logistik</h2>
+    <h3>Menyediakan layanan kargo yang efisien dan terencana, menjamin barang tiba tepat waktu dan aman.</h3>
+  </li>
+
+  <li class="text">
+    <h2>Pengalaman Penumpang Unik</h2>
+    <h3>Menciptakan pengalaman perjalanan yang nyaman, aman, dan menyenangkan bagi setiap penumpang.</h3>
+  </li>
+
+  <!-- Column 2 -->
+  <li class="text">
+    <h2>Pengembangan Jaringan</h2>
+    <h3>Memperluas rute pelayaran antar-pulau untuk mendukung distribusi barang dan pergerakan masyarakat.</h3>
+  </li>
+
+  <li class="text">
+    <h2>Inovasi dan Efisiensi</h2>
+    <h3>Mengadopsi teknologi terkini untuk meningkatkan efisiensi dan mengurangi dampak lingkungan.</h3>
+  </li>
+
+</ol>
 </section>
 <div class="line"></div>
   <section class="visi" style="flex-direction: column;">
