--- a/index.html
+++ b/index.html
@@ -84,10 +84,9 @@
   </div>
 </section>
 <section class="visi">
-  <img src="">
+  <img src="src="assets/docking.jpg">
   <div>
     <h1>Visi PT Monyet Terbang</h1>
-      <img src="assets/docking.jpg">
     <h3 style="max-width:500px;">Menjadi perusahaan pelayaran terdepan di bagian Tengah Indonesia (Jawa Tengah, Kalimantan, Sulawesi, NTB, dan Bali) yang dikenal karena layanan yang gesit, pengalaman perjalanan yang menyenangkan, dan kontribusi nyata dalam memajukan konektivitas antar wilayah.</h3>
   </div>
 </section>
