--- a/html/galeri.html
+++ b/html/galeri.html
@@ -83,7 +83,9 @@
   }
 </style>
 <br>
-<h1 style="margin-left:10px;">Armada PT. <span>Monyet</span> Terbang</h1>
+<h1 style="margin-left:10px; text-align:center;">
+    Armada PT. <span>Monyet</span> Terbang
+</h1>
 
 <table>
   <tr>
