--- a/index.html
+++ b/index.html
@@ -93,6 +93,7 @@
 <div class="line"></div>
 <section class="visi" style="flex-direction:column;">
   <img src="assets/cargo2.png">
+  <img src="assets/banner.jpg">
   <h1>Misi PT. Monyet Terbang</h1>
   <ol class="textcontain">
   
