--- a/index.html
+++ b/index.html
@@ -92,8 +92,10 @@
 </section>
 <div class="line"></div>
 <section class="visi" style="flex-direction:column;">
+  <div style="display:flex;flex-direction:row;">
   <img src="assets/cargo2.png">
   <img src="assets/banner.jpg">
+  </div>
   <h1>Misi PT. Monyet Terbang</h1>
   <ol class="textcontain">
   
