--- a/html/tiket.html
+++ b/html/tiket.html
@@ -153,7 +153,7 @@
 
 </div>
 <br>
-<a class="submit-btn" href="https://youtu.be/dQw4w9WgXcQ?si=zK_AwuPNTob2XZe7">PESAN SEKARANG</a>
+<a class="submit-btn" href="https://stephen_wisno-4397.trinket.io/sites/terima-kasih">PESAN SEKARANG</a>
 <br><br><br><br><br><br><br><br>
 
 <script>
