--- a/index.html
+++ b/index.html
@@ -25,7 +25,12 @@
   </nav>
 </header>
 <main>
-<div class="banner"><h1>Beranda</h1></div>
+  <div class="banner">
+  <img src="assets/banner.jpg">
+  <img src="assets/index.jpeg">
+  <img src="assets/docking.jpg">
+  <h1>Beranda</h1>
+</div>
 <section>
   <div class="desc">
     <h1>PT MONYET TERBANG</h1>
