--- a/html/galeri.html
+++ b/html/galeri.html
@@ -94,14 +94,18 @@
       <br><strong>PZE TERBANG</strong><br>
       Economy : 5900 orang<br>
       Business : 800 orang<br>
-      First-Class : 300 orang
+      First-Class : 300 orang<br>
+      <br>
+      Kecepatan : 35 Km/Jam
     </td>
     <td style="text-align:center;">
       <img src="../assets/star.png" class="trophyimg">
       <br><strong>RZL TERBANG</strong><br>
       Economy : 6400 orang<br>
       Business : 900 orang<br>
-      First-Class : 300 orang
+      First-Class : 300 orang<br>
+      <br>
+      Kecepatan : 40 Km/Jam
     </td>
   </tr>
   
@@ -111,14 +115,18 @@
       <br><strong>KZG TERBANG</strong><br>
       Economy : 4700 orang<br>
       Business : 600 orang<br>
-      First-Class : 300 orang
+      First-Class : 300 orang<br>
+      <br>
+      Kecepatan : 40 Km/Jam
     </td>
     <td style="text-align:center;">
       <img src="../assets/kargo.png" class="trophyimg">
       <br><strong>MSC OREO</strong><br>
       Kapasitas Kargo : 24.000 kontainer<br>
       Panjang 400 meter<br>
-      Lebar 60 meter
+      Lebar 60 meter<br>
+      <br>
+      Kecepatan : 40 Km/Jam
     </td>
   </tr>
 </table>
